--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
